--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,13 +1,33 @@
 # DATASOURCE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:tiketdb
-spring.datasource.username=admin
-spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:tiketdb
+#spring.datasource.username=admin
+#spring.datasource.password=
 # H2 CLIENT
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 # JPA, SQL
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ticketRU
+spring.datasource.username=root
+spring.datasource.password=@Voarei2001Foda-se
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+
+#run in debug mode
+logging.level.org.springframework=info
+#show sql
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+
+
+# token secret-key for JWT
+jwt.secret-key=secret
