Sistema de Login - Autheticação e Geração de Token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
 spring.profiles.active=ticket 
 
 spring.jpa.open-in-view=true
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ticketRU
+spring.datasource.username=root
+spring.datasource.password=@Voarei2001Foda-se
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+
+#run in debug mode
+logging.level.org.springframework=info
+#show sql
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+
+
+# token secret-key for JWT
+jwt.secret-key=secret
