--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,12 +1,12 @@
-# DATASOURCE
+## DATASOURCE
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:tiketdb
 #spring.datasource.username=admin
 #spring.datasource.password=
-# H2 CLIENT
+## H2 CLIENT
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
-# JPA, SQL
+## JPA, SQL
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.defer-datasource-initialization=true
 #spring.jpa.show-sql=true
@@ -17,7 +17,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ticketRU
 spring.datasource.username=root
-spring.datasource.password=@Voarei2001Foda-se
+spring.datasource.password=admin
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=update
 
