commit com mudanças na entidade user

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
 		-->
 
 		<!-- import jwt-->
+		
+		<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.2</version>
+    <scope>provided</scope>
+</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
