--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,14 @@
 			<version>5.6.14.Final</version>
 		</dependency>
 
+		<!-- gerencia net api -->
+		
+		<dependency>
+			<groupId>br.com.gerencianet.gnsdk</groupId>
+			<artifactId>gn-api-sdk-java</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
 		
 	</dependencies>
 
