--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.open-in-view=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ticketRU
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=@Voarei2001Foda-se
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=update
 
