--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,49 @@
-spring.profiles.active=ticket 
-
-spring.jpa.open-in-view=true
-
+#spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10592062
+#spring.datasource.username=sql10592062
+#spring.datasource.password=jxJewP5rlq
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ticketRU
 spring.datasource.username=root
 spring.datasource.password=@Voarei2001Foda-se
 #spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
-##run in debug mode
-#logging.level.org.springframework=info
-##show sql
-#
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-#spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+#run in debug mode
+logging.level.org.springframework=info
+#show sql
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 
 
 # token secret-key for JWT
-#jwt.secret-key=secret
+jwt.secret-key=secret
 
+# token expiration time in milliseconds
+#jwt.expiration-time-milliseconds=3600000
+# token expiration time in seconds
+#jwt.expiration-time-seconds=86400
+
+# token expiration time in minutes
+#jwt.expiration-time-minutes=1440
+
+# token expiration time in hours
+#jwt.expiration-time-hours=4
+
+# token expiration time in days
+#jwt.expiration-time-days=1
+
+# token expiration time in weeks
+#jwt.expiration-time-weeks=0
+
+# token expiration time in months
+#jwt.expiration-time-months=0
+
+# token expiration time in years
+#jwt.expiration-time-years=0
+
+# token expiration time in milliseconds
+#jwt.expiration-time-milliseconds=86400000
 
